Fix text getting cut off

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -59,7 +59,7 @@ button {
   cursor: pointer;
   display: block;
   height: 32px;
-  padding: 9px 8px;
+  padding: 3px 8px;
   text-align: left;
   width: 100%;
   border-radius: 8px;
